--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100..700&display=swap');
 /* Estilos CSS aquí */
 body {
     font-family: Arial, sans-serif;
@@ -19,12 +22,11 @@ header h1, header h2 {
     margin: 5px 0;
 }
 .text {
-    /*font-family: monospace;*/
-    font-weight: bold;
+    font-weight: 100px;
     display: inline-block;
 }
 header {
-    text-align: left;
+    text-align: center; /* Centra el texto */
     margin-bottom: 20px;
 }
 nav ul {
