--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: #f8f8f8;
 }
 .container {
-    max-width: 800px;
+    max-width: 750px;
     margin: auto;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #f8f8f8;
     /*box-shadow: 0 0 10px rgba(0,0,0,0.1);*/
     /*border-radius: 8px; */
     margin-top: 20px;
@@ -26,8 +26,21 @@ header h1, header h2 {
     display: inline-block;
 }
 header {
-    text-align: center; /* Centra el texto */
-    margin-bottom: 20px;
+    display: flex;
+    align-items: center; /* Alinea verticalmente la imagen con el texto */
+    justify-content: space-between; /* El texto a la izquierda, la imagen a la derecha */
+    padding: 20px; /* Espacio alrededor del contenido */
+}
+.header-text {
+    text-align: left; /* Asegura que el texto se alinee a la izquierda */
+    flex: 1; /* Hace que el texto ocupe todo el espacio disponible a la izquierda */
+}
+.profile-pic {
+    width: 140px; /* Ajusta el tamaño de la imagen */
+    height: 140px;
+    border-radius: 50%; /* Redondea la imagen */
+    object-fit: cover; /* Evita que la imagen se deforme */
+    padding: 20px; /* Espacio entre el texto y la imagen */
 }
 nav ul {
     list-style-type: none;
@@ -56,4 +69,48 @@ footer {
     margin-top: 20px;
     padding-top: 10px;
     border-top: 1px solid #ccc;
+}
+
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+.portfolio-item {
+    aspect-ratio: 1 / 1;
+    height: auto;
+    cursor: pointer;
+    background-color: #e6e6e6;
+    align-content: center;
+    border-radius: 25px;
+}
+.portfolio-item img {
+    width: 100%;
+    height: auto;
+}
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    background: #fff;
+    padding: 20px;
+    text-align: center;
+    width: 50%;
+}
+.close {
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    font-size: 60px;
+    cursor: pointer;
+    color: #c2c2c2;
 }
