--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-image: url('../assets/background.jpg'); /* Ruta de la imagen */
+    background-image: url('../assets/images/background.jpg'); /* Ruta de la imagen */
     background-size: 100% auto; /* Se ajusta al ancho de la pantalla */
     background-position: top;
     background-repeat: repeat;
@@ -112,7 +112,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.65);
     justify-content: center;
     align-items: center;
 }
@@ -120,14 +120,17 @@ footer {
     background: #fff;
     padding: 20px;
     text-align: center;
-    width: 50%;
+    min-width: 500px;
 }
 #modal-video-container {
     margin-top: 20px;
 }
 .modal video {
-    width: 100%;
     margin-top: 10px;
+    max-height: 55vh;
+    width: auto;     
+    display: block;
+    margin: 0 auto;  
 }
 .close {
     position: absolute;
