--- a/css/style.css
+++ b/css/style.css
@@ -126,11 +126,12 @@ footer {
     margin-top: 20px;
 }
 .modal video {
-    margin-top: 10px;
     max-height: 55vh;
-    width: auto;     
+    max-width: 100%;
+    height: auto;
+    width: auto;
     display: block;
-    margin: 0 auto;  
+    margin: 10px auto 0;
 }
 .close {
     position: absolute;
